Fix z-index for table

--- a/src/app/shared/components/dynamic-table-v2/dynamic-table-v2.component.scss
+++ b/src/app/shared/components/dynamic-table-v2/dynamic-table-v2.component.scss
@@ -498,8 +498,5 @@
 //   overflow: hidden;
 // }
 .table-content p-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  position: relative !important;
   z-index: -1000 !important;
 }
